<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/baseline_notifications_black_24dp"
        android:title="@string/nav_notification" />
    <item
        android:id="@+id/nav_business"
        android:icon="@drawable/baseline_restaurant_menu_black_24dp"
        android:title="@string/nav_business" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/baseline_map_black_24"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/baseline_menu_black_24dp"
        android:title="@string/nav_menu" />
</menu>